<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParkingTracker</string>
    <string name="home_name">Home Screen</string>
    <string name="setup_name">Setup Screen</string>
    <string name="moove_name">Move Screen</string>
    <string name="park_name">Park Screen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="edit_name">Type your name here</string>
    <string name="edit_email">Type your email here</string>
    <string name="edit_password">Type your password here</string>
    <string name="edit_password_again">Type your password here again</string>
    <string name="register_button">Register</string>
    <string name="close_button">Close</string>
    
    <string name="start_state">Start</string>
    
    <string name="spot_title">Title</string>
    <string name="spot_go">Go</string>
    <string name="spot_snippet">Snippet</string>

</resources>
