<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"/>
    
    <EditText 
        android:id="@+id/account_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email"/>
    
    <EditText 
        android:id="@+id/account_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"/>
    
    <!-- EditText 
        android:id="@+id/account_password_again"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password_again"/-->
    
    <Button 
        android:id="@+id/account_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"/>
    
    <Button 
        android:id="@+id/account_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_button"/>
    
</LinearLayout>
